--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -14,7 +14,7 @@
 {% endblock %}
 {% block content %}
         <div id="events">
-        <a href="#" onclick="display(this); return false">Automatic creation PR events:</a>
+        <a href="#" onclick="display(this); return false">Automatic creation PR events</a>
         <div class='hidden'>
         {% for event in events %}
         <div id="{{event.type}}">
