--- a/application/templates/manager.settings.html
+++ b/application/templates/manager.settings.html
@@ -5,7 +5,7 @@
             $('#check_option').attr('checked', 'checked')
         }
 
-    $('#save').click(function(){
+    $('#check_option').click(function(){
             var edit_sub_reviews = 1;
             if ($('#check_option').is(':checked')){
                 edit_sub_reviews = 0;
@@ -13,7 +13,7 @@
             $.post('/manager/settings/update',
                     {'edit_sub_reviews':
                     edit_sub_reviews});
-            window.location.href = "/#/manager/home"
+            
     })
 </script>
 {% endblock %}
@@ -24,6 +24,5 @@
 {% block content %}
 <div>
 <input type="checkbox" id="check_option" name="options">See just own MAF<br>
-<input type="button" id="save" value="save">
 </div>
 {% endblock %}
