--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -46,7 +46,7 @@
 {% endblock %}
 {% block content %}
 
-        <div><a href="/#/hr/get/projects">Projects</a></div>
+        <p><a href="/#/hr/get/projects">Projects</a></p>
 
     {% for period in periods %}
 
