--- a/application/templates/manager.settings.html
+++ b/application/templates/manager.settings.html
@@ -23,6 +23,6 @@
 {% endblock %}
 {% block content %}
 <div>
-<input type="checkbox" id="check_option" name="options">See just own MAF<br>
+<input type="checkbox" id="check_option" name="options">Direct reports only<br>
 </div>
 {% endblock %}
