--- a/application/templates/api.employee_form.html
+++ b/application/templates/api.employee_form.html
@@ -9,7 +9,23 @@
         $(function() {
                 $( "#accordion" ).accordion();
             });
-    
+    var parameters = window.location.href.split('?').length > 1;
+if (parameters){
+    var parameter =  window.location.href.split('?')[1].split('=')[0];
+    var value =  window.location.href.split('?')[1].split('=')[1];
+    if (parameter == 'err'){var err = value}
+
+if (err == 'incorrect_type'){
+    message = 'Error. We expect you to upload manager assessment form';
+}
+if (err == 'incorrect_user'){
+    message = 'Error. Wrong employee';
+}
+if (err == 'ok'){
+    message = 'You succesfully uploaded PR form';
+}
+window.location.href = window.location.href.split('?')[0]
+}
     </script>
 {% endblock %}
 
@@ -27,7 +43,8 @@
 <div>
     <p>Upload previous PR form</p>
         <form action="{{upload_form_url}}" method="POST" enctype="multipart/form-data">
-            <input type='hidden' name='key' value={{form.pr.employee.key}}>
+            <input type='hidden' name='key' value={{form.pr.key}}>
+            <input type='hidden' name='role' value='employee'>
             <input type="file" name="file"><br>
             <input type="submit" name="submit" value="attach">
         </form>
