--- a/application/templates/api.readonly_maf.html
+++ b/application/templates/api.readonly_maf.html
@@ -11,7 +11,23 @@
     $(function() {
             $( "#accordion" ).accordion();
         });
+var parameters = window.location.href.split('?').length > 1;
+if (parameters){
+    var parameter =  window.location.href.split('?')[1].split('=')[0];
+    var value =  window.location.href.split('?')[1].split('=')[1];
+    if (parameter == 'err'){var err = value}
 
+if (err == 'incorrect_type'){
+    message = 'Error. We expect you to upload manager assessment form';
+}
+if (err == 'incorrect_user'){
+    message = 'Error. Wrong employee';
+}
+if (err == 'ok'){
+    message = 'You succesfully uploaded PR form';
+}
+window.location.href = window.location.href.split('?')[0]
+}
 </script>
 {% if form.pr.is_open %}
 {% ifnotequal form.status 'submitted' %}
@@ -26,6 +42,7 @@
 
     });
     {% endifequal %}
+
 </script>
 {% endifnotequal %}
 {% endif %}
@@ -49,7 +66,10 @@
 <div>
     <p>Upload previous PR form</p>
         <form action="{{upload_form_url}}" method="POST" enctype="multipart/form-data">
-            <input type='hidden' name='key' value={{form.pr.employee.key}}>
+            <input type='hidden' name='key' value={{form.pr.key}}>
+            {% block upload_role %}
+            <input type='hidden' name='role' value='manager'>
+            {% endblock %}
             <input type="file" name="file"><br>
             <input type="submit" name="submit" value="attach">
         </form>
@@ -169,14 +189,16 @@
                 <tr>
                     <td>{{prev_goal.value}}</td>
                     <td>
-                        <select id="{{prev_goal.key}}" onchange="set_result(this.id, this.options[selectedIndex].value)">
-                            <option value="1" class="grade">below expectations</option>
-                            <option value="2" class="grade">meet expectations</option>
-                            <option value="3" class="grade">above expectations</option>
-                        </select>
-                        <script type="text/javascript" language="JavaScript">
-                            $("#{{prev_goal.key}}").val("{{prev_goal.result}}");
-                        </script>
+                        {% ifequal prev_goal.result 1 %}
+                            below expectations
+                        {% endifequal %}
+                        {% ifequal prev_goal.result 2 %}
+                            meet expectations
+                        {% endifequal %}
+                        {% ifequal prev_goal.result 3 %}
+                            above expectations
+                        {% endifequal %}
+
                     </td>
                 </tr>
             {% endfor %}
