--- a/application/templates/users.html
+++ b/application/templates/users.html
@@ -18,7 +18,7 @@
     </form>
 </div>
 
-<div><a href="/edit_user">Add user</a></div>
+<div><a href="/edit_user/">Add user</a></div>
 
 <div>
     <p>Users:</p>
