--- a/application/templates/projects.html
+++ b/application/templates/projects.html
@@ -1,7 +1,9 @@
 {% extends "_api_base.html" %}
 {% block script %}
-<!--<script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>-->
-<!--<script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>-->
+<script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
+<script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
+<script type="text/javascript" src="/static/development-bundle/ui/jquery.ui.dialog.js"></script>
+<script type="text/javascript" src="/static/development-bundle/ui/jquery.ui.widget.js"></script>
 <script type="text/javascript">
             function add(){
                 var name = $('#add_project').val();
@@ -14,13 +16,10 @@
 
             }
     var project_key = '';
-
-    $(document).ready(function(){
+$(function() {
         var employees_email = new Array();
 
-        
-    $(function() {
-//		$( "#dialog:ui-dialog" ).dialog( "destroy" );
+		$( "#dialog:ui-dialog" ).dialog( "destroy" );
 
         $( "#new_project_form" ).dialog({
 			autoOpen: false,
@@ -33,7 +32,7 @@
                         },
                       "cancel": function(){$( this ).dialog( "close" );}}
 		});
-	});
+
 
 		$( "#attaching-form" ).dialog({
 			autoOpen: false,
@@ -57,6 +56,9 @@
                         },
                       "cancel": function(){$( this ).dialog( "close" );}}
 		});
+        });
+            
+    $(document).ready(function(){
 
         $( ".attach_employee" )
 			.click(function() {
@@ -86,7 +88,6 @@
                         $('.close').focus();
 
 			}
-
                 });
     });
         </script>
