--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -1,10 +1,7 @@
 {% extends "_api_base.html" %}
 
 {% block script %}
-<script type="text/javascript" src="/static/site.js"></script>
         <script type="text/javascript" src="/static/locking_form.js"></script>
-    <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
-    <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
 <script type="text/javascript">
 
 var form_key= '{{form.key}}';
@@ -38,7 +35,7 @@ if (err == 'incorrect_user'){
 if (err == 'ok'){
     message = 'You succesfully uploaded PR form';
 }
-window.location.href = window.location.href.split('?')[0]
+document.location.hash = document.location.hash.split('?')[0];
 }
 
 
