--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -36,6 +36,7 @@ if (err == 'ok'){
     message = 'You succesfully uploaded PR form';
 }
 document.location.hash = document.location.hash.split('?')[0];
+    console.log('111');
 }
 
 
