--- a/application/templates/projects.html
+++ b/application/templates/projects.html
@@ -2,6 +2,7 @@
 {% block script %}
 <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
+<script type="text/javascript" src="/static/development-bundle/ui/jquery.ui.dialog.js"></script>
 <script type="text/javascript">
             function add(){
                 var name = $('#add_project').val();
@@ -61,8 +62,6 @@ $(function() {
 			.click(function() {
                 project_key = $(this).parent().attr('id');
 				$( "#attaching-form" ).dialog( "open" );
-
-                console.log($( "#attaching-form" ).dialog._isOpen);
 			});
         $("#new_project").click(function(){
             $( "#new_project_form" ).dialog( "open" );
