--- a/application/templates/api.manager.home.html
+++ b/application/templates/api.manager.home.html
@@ -7,18 +7,19 @@
 
 {% block content %}
 <!-- show current PR link (if open) -->
-{% if departments or projects %}
+<!--{% if departments or projects %}-->
+{% if departments %}
     {% if current_pr %}
 <h1><a href="#/manager/get/all">Current PR</a></h1>
 <ul class="pr_current">
     {% for department in departments %}
     <li><a href="#/manager/get/{{department.name}}">Department:&nbsp;{{department.name}}</a></li>
     {% endfor %}
-    {% for project in projects %}
-    <li><a href="#/manager/get/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>
-    {% endfor %}
+    <!--{% for project in projects %}-->
+    <!--<li><a href="#/manager/get/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>-->
+    <!--{% endfor %}-->
 </ul>
-        {% endif %}
+    {% endif %}
 {% endif %}
 <!-- show archived PRs link -->
 {% if prs %}
@@ -34,7 +35,7 @@
 <h1>My Projects</h1>
 <ul class="my_projects">
     {% for project in projects %}
-    <li><a href="#">{{project.name}}</a></li>
+    <li><a href="#/manager/get/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>
     {% endfor %}
 </ul>
 {% endif %}
