--- a/application/templates/api.manager.home.html
+++ b/application/templates/api.manager.home.html
@@ -7,13 +7,13 @@
 
 {% block content %}
 <!-- show current PR link (if open) -->
-<!--{% if departments or projects %}-->
+<!-- if departments or projects -->
 {% if departments %}
     {% if current_pr %}
-<h1><a href="#/manager/get/all">Current PR</a></h1>
+<h1><a href="#/manager/get/department/all">Current PR</a></h1>
 <ul class="pr_current">
     {% for department in departments %}
-    <li><a href="#/manager/get/{{department.name}}">Department:&nbsp;{{department.name}}</a></li>
+    <li><a href="#/manager/get/department/{{department.name}}">Department:&nbsp;{{department.name}}</a></li>
     {% endfor %}
     <!--{% for project in projects %}-->
     <!--<li><a href="#/manager/get/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>-->
@@ -26,16 +26,16 @@
 <h1>Archived Performance Reviews</h1>
 <ul class="pr_archived">
     {% for pr in prs %}
-    <li><a href="#/manager/get/{{pr.description}}">{{pr.description}}</a></li>
+    <li><a href="#/manager/get/period/{{pr.description}}">{{pr.description}}</a></li>
     {% endfor %}
 </ul>
 {% endif %}
 <!-- show projects and people assigned -->
 {% if projects %}
-<h1>My Projects</h1>
+<h1><a href="#/manager/get/project/all">My Projects</a></h1>
 <ul class="my_projects">
     {% for project in projects %}
-    <li><a href="#/manager/get/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>
+    <li><a href="#/manager/get/project/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>
     {% endfor %}
 </ul>
 {% endif %}
