--- a/application/templates/api.manager.home.html
+++ b/application/templates/api.manager.home.html
@@ -8,8 +8,8 @@
 {% block content %}
 <!-- show current PR link (if open) -->
 <!-- if departments or projects -->
-{% if departments %}
-    {% if current_pr %}
+{% if current_pr %}
+    {% if departments %}
 <h1><a href="#/manager/get/department/all">Current PR</a></h1>
 <ul class="pr_current">
     {% for department in departments %}
@@ -20,15 +20,21 @@
     <!--{% endfor %}-->
 </ul>
     {% endif %}
+{% else %}
+        <h1>Current PR</h1>
+        <p>There aren't open PR</p>
+
 {% endif %}
 <!-- show archived PRs link -->
-{% if prs %}
 <h1>Archived Performance Reviews</h1>
+{% if prs %}
 <ul class="pr_archived">
     {% for pr in prs %}
     <li><a href="#/manager/get/period/{{pr.description}}">{{pr.description}}</a></li>
     {% endfor %}
 </ul>
+{% else %}
+    <p>There aren't archived PRs</p>
 {% endif %}
 <!-- show projects and people assigned -->
 {% if projects %}
@@ -38,5 +44,8 @@
     <li><a href="#/manager/get/project/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>
     {% endfor %}
 </ul>
+{% else %}
+    <h1>My Projects</h1>
+    <p>You have no projects yet</p>
 {% endif %}
 {% endblock %}
