--- a/application/templates/api.readonly_eaf.html
+++ b/application/templates/api.readonly_eaf.html
@@ -216,8 +216,7 @@
 </div>
 
 </div>
-<div>
-    <input type="button" id="undo submit" onclick="eaf_draft()" value="undo submit">
-</div>
+{% block undo_submit %}
+{% endblock %}
 
 {% endblock %}
