--- a/application/templates/api.manager.departments.html
+++ b/application/templates/api.manager.departments.html
@@ -24,6 +24,7 @@
                     <td>Employee</td>
                     <td>Manager&nbsp;form</td>
                     <td>Employee&nbsp;form</td>
+                    <td>Comments</td>
                 </tr>
             </thead>
         {% endif %}
@@ -47,6 +48,7 @@
                                 <p>none</p>
                         {% endif %}
                     </td>
+                    <td><a href="#/pr/manager/comments/{{pr.key}}">comments</a></td>
                 </tr>
             
         {% endfor %}
