--- a/application/templates/api.employee.html
+++ b/application/templates/api.employee.html
@@ -10,7 +10,7 @@
         {% if current_pr.employee_form %}
         <a href="/#/employee/pr/get/employee/{{current_pr.key}}">load self AF</a>
         {% else %}
-        <a href="/#/employee/pr/add/employee/{{current_pr.employee.key}}">create self AF</a>
+        <a href="/#/employee/pr/add/employee/{{current_pr.employee.key}}">load self AF</a>
         {% endif %}
     {% else %}
         You have no assigned performance review
