--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -79,6 +79,10 @@
 
 <!-- content -->
 <div id="body">
+    <div id="user">
+    </div>
+    <div id="hint"><p style="float: left;" class='message'></p><p style="float: right;"><input type="button" value="close" onclick="hide_hint()"></p></div>
+    <div id="result" class="result"></div>
     {% block content %}
 
     {% endblock %}
