--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -1,7 +1,9 @@
 {% extends "_api_base.html" %}
 
 {% block script %}
+        
         <script type="text/javascript" src="/static/locking_form.js"></script>
+<script type="text/javascript" src="/static/jquery.drag.drop.js"></script>
 <script type="text/javascript">
 
 var form_key= '{{form.key}}';
@@ -56,15 +58,19 @@ document.location.hash = document.location.hash.split('?')[0];
 <p>date: {{form.pr.date}}</p>
 <p id="lock_info"></p>
 {% if not prev_form %}
-<div>
-    <p>Upload previous PR form</p>
-        <form action="{{upload_form_url}}" method="POST" enctype="multipart/form-data">
-            <input type='hidden' name='key' value={{form.pr.key}}>
-            <input type='hidden' name='role' value='manager'>
-            <input type="file" name="file"><br>
-            <input type="submit" name="submit" value="attach">
-        </form>
-</div>
+<!--<div>-->
+    <!--<p>Upload previous PR form</p>-->
+        <!--<form action="{{upload_form_url}}" method="POST" id="fileupload" enctype="multipart/form-data">-->
+            <!--<input type='hidden' name='key' value={{form.pr.key}}>-->
+            <!--<input type='hidden' name='role' value='manager'>-->
+            <!--<input type="file" name="file"><br>-->
+            <!--<input type="submit" name="submit" value="attach">-->
+        <!--</form>-->
+<!--</div>-->
+<form action="#" method="post" enctype="multipart/form-data">
+<input type="file" name="files[]" multiple="multiple">
+<input type="submit" value="Upload!">
+</form>
 {% endif %}
 </div>
 <div id='accordion'>
